--- a/src/seedwords_embeddings_analysis.ipynb
+++ b/src/seedwords_embeddings_analysis.ipynb
@@ -2,42 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-06-23T01:50:15.506593800Z",
-     "start_time": "2023-06-23T01:50:15.491013500Z"
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                            seeds  \\\n0         cardiovascular diseases   \n1          chronic kidney disease   \n2    chronic respiratory diseases   \n3               diabetes mellitus   \n4              digestive diseases   \n5                        hiv/aids   \n6   sexually transmitted diseases   \n7                       hepatitis   \n8                mental disorders   \n9       musculoskeletal disorders   \n10                      neoplasms   \n11         neurological disorders   \n\n                                           embeddings  \n0   [[0.517692, 0.5323571, -0.44841608, -0.0571733...  \n1   [[-0.08433671, 0.6341991, -0.36865267, -0.6714...  \n2   [[0.024628937, 0.55951333, -0.6699457, -0.3739...  \n3   [[-0.062809765, -0.33381042, 0.07737088, -0.45...  \n4   [[-0.10238004, 0.72597575, -0.51428825, -0.351...  \n5   [[0.22327654, -0.06370661, -0.06935634, -0.198...  \n6   [[-0.14896613, 0.056482732, -0.6042976, -0.231...  \n7   [[-0.3430268, -0.43190154, -1.1894568, -0.3438...  \n8   [[-0.14219496, 0.8293749, -0.47880903, -0.3365...  \n9   [[-0.1975437, -0.02582786, -0.14464998, -0.352...  \n10  [[0.18602227, 0.015335858, -0.25408834, -0.077...  \n11  [[-0.3616871, 0.8013427, -0.29296294, -0.58272...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>seeds</th>\n      <th>embeddings</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>cardiovascular diseases</td>\n      <td>[[0.517692, 0.5323571, -0.44841608, -0.0571733...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>chronic kidney disease</td>\n      <td>[[-0.08433671, 0.6341991, -0.36865267, -0.6714...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>chronic respiratory diseases</td>\n      <td>[[0.024628937, 0.55951333, -0.6699457, -0.3739...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>diabetes mellitus</td>\n      <td>[[-0.062809765, -0.33381042, 0.07737088, -0.45...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>digestive diseases</td>\n      <td>[[-0.10238004, 0.72597575, -0.51428825, -0.351...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>hiv/aids</td>\n      <td>[[0.22327654, -0.06370661, -0.06935634, -0.198...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>sexually transmitted diseases</td>\n      <td>[[-0.14896613, 0.056482732, -0.6042976, -0.231...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>hepatitis</td>\n      <td>[[-0.3430268, -0.43190154, -1.1894568, -0.3438...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>mental disorders</td>\n      <td>[[-0.14219496, 0.8293749, -0.47880903, -0.3365...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>musculoskeletal disorders</td>\n      <td>[[-0.1975437, -0.02582786, -0.14464998, -0.352...</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>neoplasms</td>\n      <td>[[0.18602227, 0.015335858, -0.25408834, -0.077...</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>neurological disorders</td>\n      <td>[[-0.3616871, 0.8013427, -0.29296294, -0.58272...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import pandas as pd\n",
-    "from embeddings import get_seed_word_embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [
-    "def get_seeds():\n",
-    "    seeds = [\n",
-    "        'cardiovascular diseases',\n",
-    "        'chronic kidney disease',\n",
-    "        'chronic respiratory diseases',\n",
-    "        'diabetes mellitus',\n",
-    "        'digestive diseases',\n",
-    "        'hiv/aids',\n",
-    "        'hepatitis a/b/c/e',\n",
-    "        'mental disorders',\n",
-    "        'musculoskeletal disorders',\n",
-    "        'neoplasms (cancer)',\n",
-    "        'neurological disorders',\n",
-    "        'hiv',\n",
-    "        'disease'\n",
-    "    ]\n",
-    "    return seeds"
+    "cosine_combined_pmi_npmi_result_save_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/new_result_data/amazon_cosine_combined_pmi_npmi_ranked.pkl\"\n",
+    "\n",
+    "seetopic_result_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/new_result_data/seetopic_amazon_result.pkl\"\n",
+    "pd.read_pickle(\"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/result_data/scidocs_seed_tensors_bert_base_uncased.pkl\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -49,7 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                          seed  \\\n0             apps for android   \n1                        books   \n2                cds and vinyl   \n3  clothing, shoes and jewelry   \n4                  electronics   \n5     health and personal care   \n6             home and kitchen   \n7                movies and tv   \n8          sports and outdoors   \n9                  video games   \n\n                                               words  \n0  [android, appsapp, apps, app_for_android, disp...  \n1  [books, bookssd, book, booksare, books-, books...  \n2  [cds, cds-, vinyls, cassettes, vinyl, 4-discs,...  \n3  [fine_jewelry, jewelers, costume_jewelry, jewe...  \n4  [electronics, hardware, embroidery, equipment,...  \n5  [care, personal_care, health_care, healthblue,...  \n6  [home_kitchen, kitchen_and_bathroom, kitchen_f...  \n7  [tv, tv_shows, films, film, television_series,...  \n8  [outdoors, sports, sporting_events, outdoor_ac...  \n9  [videogame, videogames, animes, video_games, v...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>seed</th>\n      <th>words</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>apps for android</td>\n      <td>[android, appsapp, apps, app_for_android, disp...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>books</td>\n      <td>[books, bookssd, book, booksare, books-, books...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>cds and vinyl</td>\n      <td>[cds, cds-, vinyls, cassettes, vinyl, 4-discs,...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>clothing, shoes and jewelry</td>\n      <td>[fine_jewelry, jewelers, costume_jewelry, jewe...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>electronics</td>\n      <td>[electronics, hardware, embroidery, equipment,...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>health and personal care</td>\n      <td>[care, personal_care, health_care, healthblue,...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>home and kitchen</td>\n      <td>[home_kitchen, kitchen_and_bathroom, kitchen_f...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>movies and tv</td>\n      <td>[tv, tv_shows, films, film, television_series,...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>sports and outdoors</td>\n      <td>[outdoors, sports, sporting_events, outdoor_ac...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>video games</td>\n      <td>[videogame, videogames, animes, video_games, v...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_pickle(cosine_combined_pmi_npmi_result_save_path)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def create_seeds_info_table():\n",
